Add virtual thread executors